[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/CanvasModulate.gd" type="Script" id=1]

[node name="CanvasModulate" type="CanvasModulate"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="evening_morning" type="Timer" parent="."]
wait_time = 0.36
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 108.0
autostart = true

[connection signal="timeout" from="evening_morning" to="." method="_on_evening_morning_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
